# ssis

./: CMakeLists.txt  README.md  package.xml
include/ssis/: ssis_tools.hpp
launch/: parallel_wire.launch.py  ssis.launch.py  ssis_3tethers.lanuch.py  ssis_3tethers.launch.py
src/: get_result_node.cpp  gpt_code.cpp  min_tuav_tethers.cpp  tension_visualization_node.cpp  tether_visualization_node.cpp  tuav1_drower.cpp  uav_frame_publisher_3tethers.cpp  uav_position_publisher.cpp  visualization_node.cpp
src/old/: uav1_frame_publisher.cpp  uav2_frame_publisher.cpp  uav3_frame_publisher.cpp
